# Bangalore-Restaurant-Recommender

./: .gitignore  README.md  app.py  pyproject.toml
notebooks/: dataset_cleaner.ipynb
src/: feature_engineer.py  preprocessing.py  recommender.py
