[project]
name = "bangalore-restaurant-recommender"
version = "1.0.0"
description = "A content-based restaurant recommendation system using TF-IDF and cosine similarity."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "scikit-learn>=1.9.0",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
